feat: rework typographic scales

--- a/components/Heading/Heading.css
+++ b/components/Heading/Heading.css
@@ -4,185 +4,93 @@
   margin: 0;
 }
 
-.msrd .msrd-Heading--01 {
-  font: var(--font-01);
-  font-weight: 700;
-  letter-spacing: var(--font-01-letter-spacing);
-}
-
-.msrd .msrd-Heading--02 {
+.msrd .msrd-Heading--6 {
   font: var(--font-02);
   font-weight: 700;
   letter-spacing: var(--font-02-letter-spacing);
 }
 
-.msrd .msrd-Heading--03 {
+.msrd .msrd-Heading--5 {
   font: var(--font-03);
   font-weight: 700;
   letter-spacing: var(--font-03-letter-spacing);
 }
 
-.msrd .msrd-Heading--04 {
+@media (min-width: 48em) {
+  .msrd .msrd-Heading--5 {
+    font: var(--font-04);
+    font-weight: 700;
+    letter-spacing: var(--font-04-letter-spacing);
+  }
+}
+
+.msrd .msrd-Heading--4 {
   font: var(--font-04);
   font-weight: 700;
   letter-spacing: var(--font-04-letter-spacing);
 }
 
-.msrd .msrd-Heading--05 {
+@media (min-width: 48em) {
+  .msrd .msrd-Heading--4 {
+    font: var(--font-05);
+    font-weight: 700;
+    letter-spacing: var(--font-05-letter-spacing);
+  }
+}
+
+.msrd .msrd-Heading--3 {
   font: var(--font-05);
   font-weight: 700;
   letter-spacing: var(--font-05-letter-spacing);
 }
 
-.msrd .msrd-Heading--06 {
-  font: var(--font-06);
-  font-weight: 700;
-  letter-spacing: var(--font-06-letter-spacing);
+@media (min-width: 48em) {
+  .msrd .msrd-Heading--3 {
+    font: var(--font-06);
+    font-weight: 700;
+    letter-spacing: var(--font-06-letter-spacing);
+  }
 }
 
-.msrd .msrd-Heading--07 {
+.msrd .msrd-Heading--2 {
   font: var(--font-07);
   font-weight: 700;
   letter-spacing: var(--font-07-letter-spacing);
 }
 
-.msrd .msrd-Heading--08 {
-  font: var(--font-08);
-  font-weight: 700;
-  letter-spacing: var(--font-08-letter-spacing);
+@media (min-width: 48em) {
+  .msrd .msrd-Heading--2 {
+    font: var(--font-08);
+    font-weight: 700;
+    letter-spacing: var(--font-08-letter-spacing);
+  }
 }
 
-.msrd .msrd-Heading--09 {
+.msrd .msrd-Heading--1 {
   font: var(--font-09);
   font-weight: 800;
   letter-spacing: var(--font-09-letter-spacing);
 }
 
-.msrd .msrd-Heading--10 {
-  font: var(--font-10);
-  font-weight: 800;
-  letter-spacing: var(--font-10-letter-spacing);
-}
-
-.msrd .msrd-Heading--11 {
-  font: var(--font-11);
-  font-weight: 800;
-  letter-spacing: var(--font-11-letter-spacing);
-}
-
-.msrd .msrd-Heading--12 {
-  font: var(--font-12);
-  font-weight: 800;
-  letter-spacing: var(--font-12-letter-spacing);
-}
-
-.msrd .msrd-Heading--13 {
-  font: var(--font-13);
-  font-weight: 800;
-  letter-spacing: var(--font-13-letter-spacing);
-}
-
-.msrd .msrd-Heading--14 {
-  font: var(--font-14);
-  font-weight: 800;
-  letter-spacing: var(--font-14-letter-spacing);
-}
-
-.msrd .msrd-Heading--15 {
-  font: var(--font-15);
-  font-weight: 800;
-  letter-spacing: var(--font-15-letter-spacing);
-}
-
 @media (min-width: 48em) {
-  .msrd .msrd-Heading--desktop01 {
-    font: var(--font-01);
-    font-weight: 700;
-    letter-spacing: var(--font-01-letter-spacing);
-  }
-
-  .msrd .msrd-Heading--desktop02 {
-    font: var(--font-02);
-    font-weight: 700;
-    letter-spacing: var(--font-02-letter-spacing);
-  }
-
-  .msrd .msrd-Heading--desktop03 {
-    font: var(--font-03);
-    font-weight: 700;
-    letter-spacing: var(--font-03-letter-spacing);
-  }
-
-  .msrd .msrd-Heading--desktop04 {
-    font: var(--font-04);
-    font-weight: 700;
-    letter-spacing: var(--font-04-letter-spacing);
-  }
-
-  .msrd .msrd-Heading--desktop05 {
-    font: var(--font-05);
-    font-weight: 700;
-    letter-spacing: var(--font-05-letter-spacing);
-  }
-
-  .msrd .msrd-Heading--desktop06 {
-    font: var(--font-06);
-    font-weight: 700;
-    letter-spacing: var(--font-06-letter-spacing);
-  }
-
-  .msrd .msrd-Heading--desktop07 {
-    font: var(--font-07);
-    font-weight: 700;
-    letter-spacing: var(--font-07-letter-spacing);
-  }
-
-  .msrd .msrd-Heading--desktop08 {
-    font: var(--font-08);
-    font-weight: 700;
-    letter-spacing: var(--font-08-letter-spacing);
-  }
-
-  .msrd .msrd-Heading--desktop09 {
-    font: var(--font-09);
-    font-weight: 800;
-    letter-spacing: var(--font-09-letter-spacing);
-  }
-
-  .msrd .msrd-Heading--desktop10 {
+  .msrd .msrd-Heading--1  {
     font: var(--font-10);
     font-weight: 800;
     letter-spacing: var(--font-10-letter-spacing);
   }
+}
 
-  .msrd .msrd-Heading--desktop11 {
+.msrd .msrd-Heading--display {
+  font: var(--font-09);
+  font-weight: 800;
+  letter-spacing: var(--font-09-letter-spacing);
+}
+
+@media (min-width: 48em) {
+  .msrd .msrd-Heading--display  {
     font: var(--font-11);
     font-weight: 800;
     letter-spacing: var(--font-11-letter-spacing);
-  }
-
-  .msrd .msrd-Heading--desktop12 {
-    font: var(--font-12);
-    font-weight: 800;
-    letter-spacing: var(--font-12-letter-spacing);
-  }
-
-  .msrd .msrd-Heading--desktop13 {
-    font: var(--font-13);
-    font-weight: 800;
-    letter-spacing: var(--font-13-letter-spacing);
-  }
-
-  .msrd .msrd-Heading--desktop14 {
-    font: var(--font-14);
-    font-weight: 800;
-    letter-spacing: var(--font-14-letter-spacing);
-  }
-
-  .msrd .msrd-Heading--desktop15 {
-    font: var(--font-15);
-    font-weight: 800;
-    letter-spacing: var(--font-15-letter-spacing);
   }
 }
 
