--- a/components/Contact/Contact.css
+++ b/components/Contact/Contact.css
@@ -21,18 +21,26 @@
 
 .msrd .msrd-Contact-heading {
   color: var(--color-brand);
-  font: var(--font-07);
+  font: var(--font-08);
   font-weight: 700;
-  letter-spacing: var(--font-07-letter-spacing);
+  letter-spacing: var(--font-08-letter-spacing);
   margin-bottom: 0;
   margin-top: 0;
 }
 
-@media (min-width: 48em) {
+@media (min-width: 23em) {
   .msrd .msrd-Contact-heading {
     font: var(--font-09);
     font-weight: 700;
     letter-spacing: var(--font-09-letter-spacing);
+  }
+}
+
+@media (min-width: 48em) {
+  .msrd .msrd-Contact-heading {
+    font: var(--font-10);
+    font-weight: 700;
+    letter-spacing: var(--font-10-letter-spacing);
     margin-bottom: var(--space-vertical-01);
   }
 }
@@ -44,8 +52,17 @@
 }
 
 .msrd .msrd-Contact-strapline {
+  font: var(--font-03);
+  letter-spacing: var(--font-03-letter-spacing);
   margin-bottom: var(--space-vertical-03);
   margin-top: 0;
+}
+
+@media (min-width: 23em) {
+  .msrd .msrd-Contact-strapline {
+    font: var(--font-04);
+    letter-spacing: var(--font-04-letter-spacing);
+  }
 }
 
 @media (min-width: 48em) {
@@ -73,8 +90,8 @@
 
 @media (min-width: 48em) {
   .msrd .msrd-Contact-methods {
-    font: var(--font-07);
-    letter-spacing: var(--font-07-letter-spacing);
+    font: var(--font-06);
+    letter-spacing: var(--font-06-letter-spacing);
   }
 }
 
